--- a/src/app/layout/layouts/vertical/sidebar/sidebar.component.html
+++ b/src/app/layout/layouts/vertical/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
     <ul class="flex flex-col gap-1">
       <li *ngFor="let link of links">
         <button [routerLink]="link.routerLink"
-          routerLinkActive="bg-gradient-to-tr from-blue-600 to-blue-400 shadow-md shadow-blue-500/20 hover:shadow-lg hover:shadow-blue-500/40 active:opacity-80"
+          routerLinkActive="bg-gradient-to-tr from-green-400 to-blue-400 shadow-md shadow-blue-500/20 hover:shadow-lg hover:shadow-blue-500/40 active:opacity-80"
           class="font-bold text-xs pt-3 pb-0 rounded-lg text-white flex w-full gap-4 px-4 capitalize transition-all hover:bg-white/10 active:bg-white/30"
           type="button">
           <mat-icon>{{ link.icon }}</mat-icon>
