--- a/src/app/layout/layouts/vertical/layout/layout.component.html
+++ b/src/app/layout/layouts/vertical/layout/layout.component.html
@@ -2,7 +2,7 @@
 <div class="min-h-screen bg-gray-50/50">
     <app-sidebar/>
     <div class="p-4 xl:ml-80">
-      <nav class="block w-full max-w-full bg-transparent text-white shadow-none rounded-xl transition-all px-0 py-1">
+      <nav class="block w-full max-w-full bg-transparent text-white shadow-none rounded-xl transition-all px-0 ">
         <app-header/>
       </nav>
       <div class="mt-12">
