--- a/src/app/layout/layouts/vertical/sidebar/sidebar.component.html
+++ b/src/app/layout/layouts/vertical/sidebar/sidebar.component.html
@@ -1,25 +1,26 @@
 <aside
-  class="bg-principal-900 -translate-x-80 fixed inset-0 z-50 my-4 ml-4 h-[calc(100vh-32px)] w-72 rounded-xl transition-transform duration-300 xl:translate-x-0">
-  <div class="relative border-b border-white/20">
-    <a class="flex items-center gap-4 py-6 px-8">
-      <h6 class="text-white text-base font-semibold">
-        Material Tailwind Dashboard
-      </h6>
-    </a>
-  </div>
-  <div class="m-4">
-    <ul class="flex flex-col gap-1">
-      <li *ngFor="let link of links">
-        <button [routerLink]="link.routerLink"
-          routerLinkActive="bg-principal-400 shadow-md shadow-blue-500/20 hover:shadow-lg hover:shadow-blue-500/40 active:opacity-80"
-          class="font-bold text-xs pt-3 pb-0 rounded-lg text-white flex w-full gap-4 px-4 capitalize transition-all hover:bg-principal-300 active:bg-white/30"
-          type="button">
-          <mat-icon>{{ link.icon }}</mat-icon>
-          <p class="text-base font-medium">
-            {{ link.label }}
-          </p>
-        </button>
-      </li>
-    </ul>
-  </div>
-</aside>
+      class="bg-principal-900 -translate-x-80 fixed inset-0 z-50 my-4 ml-4 h-[calc(100vh-32px)] w-72 rounded-xl transition-transform duration-300 xl:translate-x-0"
+      [ngClass]="{'-translate-x-80': !isOpen, 'translate-x-0': isOpen}">
+      <div class="relative border-b border-white/20">
+        <a class="flex items-center gap-4 py-6 px-8">
+          <h6 class="text-white text-base font-semibold">
+            Material Tailwind Dashboard
+          </h6>
+        </a>
+      </div>
+      <div class="m-4">
+        <ul class="flex flex-col gap-1">
+          <li *ngFor="let link of links">
+            <button [routerLink]="link.routerLink"
+              routerLinkActive="bg-principal-400 shadow-md shadow-blue-500/20 hover:shadow-lg hover:shadow-blue-500/40 active:opacity-80"
+              class="font-bold text-xs pt-3 pb-0 rounded-lg text-white flex w-full gap-4 px-4 capitalize transition-all hover:bg-principal-300 active:bg-white/30"
+              type="button">
+              <mat-icon>{{ link.icon }}</mat-icon>
+              <p class="text-base font-medium">
+                {{ link.label }}
+              </p>
+            </button>
+          </li>
+        </ul>
+      </div>
+    </aside>
