--- a/src/app/layout/layouts/vertical/header/header.component.html
+++ b/src/app/layout/layouts/vertical/header/header.component.html
@@ -1,11 +1,11 @@
-<div class="flex items-center bg-blue-900 p-2 rounded-md space-x-4">
+<div class="flex items-center bg-blue-900 rounded-md space-x-4 p-2">
   <div class="flex items-center flex-1 space-x-4">
     <button
       class="w-10 h-10 text-gray-100 transition-all rounded-lg flex items-center justify-center hover:bg-blue-600 active:bg-blue-700"
       type="button" (click)="toggleSidebar()">
       <mat-icon>menu</mat-icon>
     </button>
-    <span>{{ currentLabel }} </span>
+    <span class="hidden xs:inline">{{ currentLabel }}</span>
   </div>
   <button
     class="w-10 h-10 text-gray-100 transition-all rounded-lg flex items-center justify-center hover:bg-blue-600 active:bg-blue-700"
