--- a/src/app/layout/layouts/vertical/sidebar/sidebar.component.html
+++ b/src/app/layout/layouts/vertical/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <aside #sidebar
-  class="bg-principal-900 fixed inset-0 z-50 my-4 ml-4 h-[calc(100vh-32px)] w-72 rounded-xl transition-transform duration-300 transform -translate-x-80 md:translate-x-0"
-  [ngClass]="{'-translate-x-80': !isOpen, 'translate-x-0': isOpen, 'md:-translate-x-80': !isOpen}">
+  class="bg-principal-900 -translate-x-80 fixed inset-0 z-50 my-4 ml-4 h-[calc(100vh-32px)] w-72 rounded-xl transition-transform duration-300 xl:translate-x-0"
+  [ngClass]="{'-translate-x-80': !isOpen, 'translate-x-0': isOpen}">
   <div class="relative border-b border-white/20">
     <a class="flex items-center gap-4 py-6 px-8">
       <h6 class="text-white text-base font-semibold">
